// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Opinion and two template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`2. Opinion and two template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`3. Opinion and two template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
        <SupportContainer>
          <ExampleChild
            id="support-2"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`4. Opinion and two tracking roles 1`] = `
Array [
  "opinion-and-two",
  "opinion-and-two-supporting-1",
  "opinion-and-two-supporting-2",
]
`;
